force-app/main/default/objects/OrgUsersLicense__c/OrgUsersLicense__c.object-meta.xml
<CustomObject>
    <description>LMT User License is the Detail object of License Management Tool. It&apos;s synced from Other orgs to EEO org with User details.</description>
    <label>LMT User  License</label>
    <nameField>
        <displayFormat>LMT-User_License-{0}</displayFormat>
        <label>LMT User License #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMT Users License</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>