force-app/main/default/objects/OrgUsersLicense__c/fields/ActiveUser__c.field-meta.xml
<CustomField>
    <fullName>ActiveUser__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active User?</label>
    <type>Checkbox</type>
</CustomField>