force-app/main/default/objects/OrgUsersLicense__c/fields/CRM_Permissions_Used__c.field-meta.xml
<CustomField>
    <fullName>CRM_Permissions_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM Permissions Used?</label>
    <type>Checkbox</type>
</CustomField>