force-app/main/default/objects/OrgUsersLicense__c/fields/FederationID__c.field-meta.xml
<CustomField>
    <fullName>FederationID__c</fullName>
    <label>Federation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>