force-app/main/default/objects/OrgUsersLicense__c/fields/LicenseRank__c.field-meta.xml
<CustomField>
    <fullName>LicenseRank__c</fullName>
    <formula>CASE( UserLicense__c , &apos;Chatter Free&apos;, 0, &apos;Salesforce Platform&apos;, 1, &apos;Salesforce&apos;, 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>