force-app/main/default/objects/OrgUsersLicense__c/fields/LMT_User__c.field-meta.xml
<CustomField>
    <fullName>LMT_User__c</fullName>
    <label>LMT User</label>
    <referenceTo>LMT_User__c</referenceTo>
    <relationshipName>Org_Users_License</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>