force-app/main/default/objects/OrgUsersLicense__c/fields/MaxLicense__c.field-meta.xml
<CustomField>
    <fullName>MaxLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max License</label>
    <type>Checkbox</type>
</CustomField>