force-app/main/default/objects/OrgUsersLicense__c/fields/OrgFedIDKey__c.field-meta.xml
<CustomField>
    <fullName>OrgFedIDKey__c</fullName>
    <externalId>true</externalId>
    <label>OrgFedIDKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>