force-app/main/default/objects/OrgUsersLicense__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <label>Org. Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>