force-app/main/default/objects/OrgUsersLicense__c/fields/UserLicense__c.field-meta.xml
<CustomField>
    <fullName>UserLicense__c</fullName>
    <label>User License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>