force-app/main/default/objects/OrgUsersLicense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgName__c</columns>
    <columns>FederationID__c</columns>
    <columns>ActiveUser__c</columns>
    <columns>UserLicense__c</columns>
    <columns>CRM_Permissions_Used__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>